<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuickCallActivity">

    <include layout="@layout/actionbar_call" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button android:id="@+id/btn_anim_alpha" style="?android:attr/buttonBarStyle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="Alpha" android:textSize="12sp" android:backgroundTint="#FF6F00" />
        <Button android:id="@+id/btn_anim_scale" style="?android:attr/buttonBarStyle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="Scale" android:textSize="12sp" android:layout_marginStart="5dp" android:backgroundTint="#00838F" />
        <Button android:id="@+id/btn_anim_trans" style="?android:attr/buttonBarStyle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="Trans" android:textSize="12sp" android:layout_marginStart="5dp" android:backgroundTint="#4527A0" />
        <Button android:id="@+id/btn_anim_rotate" style="?android:attr/buttonBarStyle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="Rotate" android:textSize="12sp" android:layout_marginStart="5dp" android:backgroundTint="#C62828" />
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <FrameLayout
            android:id="@+id/fr_mom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#FFD54F"
            android:padding="10dp"
            android:tag="@string/phone_mom">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_phone_yellow"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_mom"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fr_dad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#4FC3F7"
            android:padding="10dp"
            android:tag="@string/phone_dad">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_phone_blue"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_dad"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fr_crush"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#EF5350"
            android:padding="10dp"
            android:tag="@string/phone_crush">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_phone_red"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_crush"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fr_best_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_radius"
            android:backgroundTint="#81C784"
            android:padding="10dp"
            android:tag="@string/phone_best_friend">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_phone_green"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_best_friend"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>